# alliance-platform-py

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CHANGESETS_INTEGRATION.md  Justfile  README.md  package.json  pyproject.toml  tox.ini
.changeset/: afraid-llamas-change.md  afraid-swans-cover.md  ap-codegen-management-command.md  async-file-has-changed.md  big-oranges-fold.md  big-scissors-add.md  breezy-hotels-bake.md  bright-avocados-marry.md  bright-poets-suffer.md  chilly-rabbits-battle.md  clever-timers-watch.md  cool-flies-study.md  cyan-gorillas-hide.md  dirty-olives-attend.md  eight-windows-grab.md  empty-doors-complain.md  empty-eggs-fly.md  fix-codegen-cache-dir.md  fix-inlinealert-content-bundling.md  fluffy-walls-heal.md  four-elephants-breathe.md  four-jeans-raise.md  fresh-crabs-unite.md  funny-carpets-obey.md  gentle-stingrays-drop.md  giant-knives-arrive.md  gorgeous-llamas-argue.md  great-bottles-fail.md  great-moons-search.md  great-needles-boil.md  green-carrots-admire.md  happy-gorillas-clap.md  heavy-pets-sleep.md  lazy-rockets-pay.md  many-squids-exercise.md  mean-bats-exist.md  mighty-peas-cheer.md  nervous-lies-worry.md  ninety-radios-fold.md  perfect-seahorses-know.md  (+35 more)
.github/workflows/: ap-ui-fixture-drift.yml  ci.yml  release.yml
constraints/: README.md  django42.txt  django52.txt
docs/: conf.py
docs/_doc_utils/: ap_doc_utils.py
scripts/: build-docs.sh  build-skill-docs.sh  publish-skill-well-known.sh  publish.py  publish.sh  release-notifications.mjs  run_script.sh  update-pr.mjs  version.py
scripts/ap_scripts/: utils.py
skills/alliance-platform-docs/: SKILL.md
skills/alliance-platform-docs/references/: README.md
