[project]
name = "alliance-platform"
version = "0.0.1"
dependencies = []
requires-python = ">=3.11"

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
  "alliance-platform-frontend",
  "alliance-platform-codegen",
  "alliance-platform-core",
  "alliance-platform-storage",
  "alliance-platform-audit",
  "alliance-platform-ui",
  "alliance-platform-pdf",
  "alliance-platform-server-choices",
  "alliance-platform-ordered-model",
  "beautifulsoup4<5.0,>=4.11",
  "django-stubs",
  "djangorestframework-stubs",
  "logging-tree",
  "mypy>=1.3",
  "packaging",
  "psycopg",
  "requests",
  "rules",
  "types-Werkzeug",
  "types-beautifulsoup4",
  "types-factory-boy",
  "types-requests",
  "types-setuptools",
  "ruff",
  "Pillow",
  "django-storages[s3]",
  "django-storages[azure]",
  "Django>=5.1",
  "django-hijack>=3.0.4",
  "pypdf>=4.1.0",
  "django-filter",
  "django-filter-stubs",
  "coverage[toml]>=7.0",
]
docs = [
  "sphinx>=8.1,<9.0",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-autodoc-typehints>=2.5.0",
  "sphinx-rtd-theme>=3.0.0",
  "sphinx-multiproject>=1.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
alliance-platform-core = { workspace = true }
alliance-platform-codegen = { workspace = true }
alliance-platform-frontend = { workspace = true }
alliance-platform-storage = { workspace = true }
alliance-platform-audit = { workspace = true }
alliance-platform-ui = { workspace = true }
alliance-platform-pdf = { workspace = true }
alliance-platform-server-choices = { workspace = true }
alliance-platform-ordered-model = { workspace = true }

[tool.ruff]
line-length = 110
target-version = 'py311'

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
order-by-type = true
force-single-line = true
force-sort-within-sections = true

[tool.coverage.run]
source = ["alliance_platform"]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/__pycache__/*",
  "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

